:recycle: refactored ui

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.MainActivity">
 
-
     <include
-        android:id="@+id/layout_loading"
-        layout="@layout/layout_loading"
-        android:visibility="gone" />
+        android:id="@+id/layout_main_content"
+        layout="@layout/layout_main_content" />
 
     <include
         android:id="@+id/layout_error"
@@ -18,8 +16,10 @@
         android:visibility="gone" />
 
     <include
-        android:id="@+id/layout_main_content"
-        layout="@layout/layout_main_content" />
+        android:id="@+id/layout_loading"
+        layout="@layout/layout_loading"
+        android:visibility="gone" />
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+
+</FrameLayout>
