--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
 
 
     <!--material dimensions-->
+    <dimen name="mod_0">4dp</dimen>
     <dimen name="mod_1">8dp</dimen>
     <dimen name="mod_2">14dp</dimen>
     <dimen name="mod_3">24dp</dimen>
