--- a/src/main/res/layout/layout_main_content.xml
+++ b/src/main/res/layout/layout_main_content.xml
@@ -1,71 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F2F2F2"
-    android:orientation="vertical">
+    android:background="#F2F2F2">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/container_title"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/forcast_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/mod_10"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        tools:listitem="@layout/item_layout" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/text_current_temp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/colorTextSecondary"
-            android:textSize="@dimen/font_main"
-            tools:text="20º" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/text_current_city"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:textColor="@color/colorCustomBlue"
-            android:textSize="@dimen/font_subline"
-            tools:text="India" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/container_title"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:paddingTop="@dimen/mod_2">
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:background="#FFFFFF"
-            android:id="@+id/layout_bottomSheet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:behavior_hideable="false"
-            app:behavior_peekHeight="@dimen/default_forcast_list_peek"
-            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/forcast_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                tools:listitem="@layout/item_layout" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
